# bako_hackathon_prototype

./: .env.example  .gitignore  AGENTS.md  API_SCHEMA.yaml  README.md  bakery.db  main.py  model.pkl  pyproject.toml  run.md  run.sh  test_bakery.db
FRONTEND/EXTRAS/: PROJECT_CONTEXT.md
FRONTEND/src/: App.css  App.jsx  api.js  index.css
FRONTEND/src/components/CategoryTag/: CategoryTag.css  CategoryTag.jsx
FRONTEND/src/components/ChecklistRow/: ChecklistRow.css  ChecklistRow.jsx
FRONTEND/src/components/ProgressBar/: ProgressBar.css  ProgressBar.jsx
FRONTEND/src/components/ScrollToTop/: ScrollToTop.css  ScrollToTop.jsx
FRONTEND/src/components/TabNav/: TabNav.css  TabNav.jsx
FRONTEND/src/components/UrgencyBadge/: UrgencyBadge.css  UrgencyBadge.jsx
FRONTEND/src/data/: mockData.js
FRONTEND/src/tabs/AnalysisTab/: AnalysisTab.css  AnalysisTab.jsx  DailyLossTrendChart.jsx  KpiStrip.jsx  LossDistributionDonut.jsx  MaterialDrillDown.jsx  MaterialUsagePanel.jsx  MaterialWasteChart.jsx  ProductLossDrillDown.jsx  ProductLossPanel.jsx  ProductLossPieChart.jsx
FRONTEND/src/tabs/CleaningTab/: CleaningTab.css  (+1 more)
TABLET_FRONTEND/: index.html  package-lock.json  package.json
TABLET_FRONTEND/public/: img.avif
TABLET_FRONTEND/src/: App.jsx  gemini.js  voice_session.js
src/: __main__.py  config.py  db.py  main.py  prediction_model.py  tool_handlers.py  tools.py  weather_forecast.py
src/app/: check.py  main.py  requirements.txt
src/app/static/: app.js  index.html
src/test/: seed_fake_data.py  test_bakery.db  test_chat.py  test_tools.py  test_voice.py
(+21 files in other folders)
