[project]
name = "bakohackathon"
version = "0.1.0"
description = "Bakery voice checklist assistant using Gemini Live API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "uvicorn>=0.34.0",
]
